osd/OSDMonitor: check svc is writeable before changing pending

Fixes: https://tracker.ceph.com/issues/59813
Signed-off-by: Patrick Donnelly <pdonnell@redhat.com>